--- a/search-website-functions-v4/client/package.json
+++ b/search-website-functions-v4/client/package.json
@@ -21,6 +21,10 @@
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
+  "resolutions": {
+    "**/react":"18.2.0",
+    "**/react-dom":"18.2.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -44,5 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+    
   }
 }
