--- a/search-website-functions-v4/api/package.json
+++ b/search-website-functions-v4/api/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/search-documents": "^11.3.0"
+    "@azure/search-documents": "^11.3.0",
+    "@azure/storage-blob":"^12.12.0"
   },
   "devDependencies": {}
 }
