--- a/search-website-functions-v4/package.json
+++ b/search-website-functions-v4/package.json
@@ -7,7 +7,8 @@
     "doc": "docs"
   },
   "dependencies": {
-    "concurrently": "^7.6.0"
+    "concurrently": "^7.6.0",
+    "package.json": "^2.0.1"
   },
   "devDependencies": {
     "@azure/static-web-apps-cli": "^1.0.3",
